product display alignment fix for smaller/larger devices

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,24 +1,3 @@
-/* .card-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.card {
-    width: 30%;
-    text-align: left;
-    padding: 10px;
-    margin-top: 10px;
-    background-color: #ffffff;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-}
-
-.card img{
-    background-color: #f5f5f5;
-    max-width: 150px;
-}
- */
-
 .card-list {
     display: flex;
     flex-wrap: wrap;
@@ -26,15 +5,47 @@
 }
 
 .card {
-    text-align: left;
-    flex-basis: 30%;
-    padding-left: 10px;
-    margin-top: 10px;
-    height: 49vh;
+    display: flex;
+    flex-direction: column;
     background-color: #ffffff;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 .card img {
     max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.icon {
+    float: right;
+    margin-left: auto;
+    padding-right: 10px;
+    color: red;
+}
+
+.icon:hover {
+    color: orange;
+}
+
+.price {
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+.name {
+    padding-left: 10px;
+}
+
+/* large devices condition */
+
+@media only screen and (min-width: 992px) {
+    .card {
+        margin-top: 10px;
+        justify-content: space-evenly;
+        display: flex;
+        width: 30%;
+        flex-direction: column;
+        background-color: #ffffff;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;    }
 }
